--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.15",
     "aos": "^2.3.4",
+    "axios": "^1.9.0",
     "lottie-react": "^2.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.4.0",
+    "react-toastify": "^11.0.5",
     "tailwindcss": "^4.0.15"
   },
   "devDependencies": {
