--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "lottie-react": "^2.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-router": "^7.4.0",
+    "react-social-icons": "^6.24.0",
     "react-toastify": "^11.0.5",
     "tailwindcss": "^4.0.15"
   },
