--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.0.15",
     "aos": "^2.3.4",
     "axios": "^1.9.0",
+    "framer-motion": "^12.12.1",
     "lightgallery": "^2.8.3",
     "lottie-react": "^2.4.1",
     "react": "^19.0.0",
