--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.9.0",
     "framer-motion": "^12.12.1",
     "lightgallery": "^2.8.3",
+    "lodash": "^4.17.21",
     "lottie-react": "^2.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
