--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-modal": "^3.16.3",
     "react-router": "^7.4.0",
     "react-social-icons": "^6.24.0",
     "react-toastify": "^11.0.5",
+    "sweetalert2": "^11.22.2",
     "tailwindcss": "^4.0.15"
   },
   "devDependencies": {
