--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^5.5.0",
     "react-modal": "^3.16.3",
     "react-router": "^7.4.0",
+    "react-router-dom": "^7.8.2",
     "react-social-icons": "^6.24.0",
     "react-toastify": "^11.0.5",
     "sweetalert2": "^11.22.2",
